[BE] fix: 팀 구성 기능 수정